crates/tests/other-db-tests/src/cockroach/snapshots/other_db_tests__cockroach__query_tests__predicates__select_where_or.snap
---
source: crates/tests/other-db-tests/src/cockroach/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Title": "IV"
      },
      {
        "Title": "Van Halen III"
      }
    ]
  }
]
