crates/tests/other-db-tests/src/cockroach/snapshots/other_db_tests__cockroach__query_tests__predicates__select_where_variable.snap
---
source: crates/tests/other-db-tests/src/cockroach/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Title": "Garage Inc. (Disc 1)"
      },
      {
        "Title": "Garage Inc. (Disc 2)"
      }
    ]
  },
  {
    "rows": [
      {
        "Title": "Beyond Good And Evil"
      }
    ]
  }
]
